Changed http on https

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <svg id="title-img" width="100%" height="100%" viewBox="0 0 1134 1134" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    xml:space="preserve" style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421; will-change: transform;">
+                <svg id="title-img" width="100%" height="100%" viewBox="0 0 1134 1134" version="1.1" xmlns="https://www.w3.org/2000/svg"
+                    xmlns:xlink="https://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421; will-change: transform;">
                     <path d="M157.607,177.355c33.117,-122.76 166.863,-193.728 298.682,-158.407c131.947,35.355 212.319,163.904 179.366,286.886c-32.921,122.862 -166.57,193.984 -298.393,158.871l-0.386,-0.103c-47.837,-4.656 -100.659,-7.056 -143.048,4.463c-65.416,17.776 -108.229,42.012 -139.58,94.029l103.262,-385.378l0.097,-0.361Z"
                         style="fill:#fff;"></path>
                     <path d="M953.343,152.133c122.76,33.118 193.728,166.863 158.408,298.682c-35.356,131.948 -163.905,212.319 -286.887,179.367c-122.862,-32.921 -193.984,-166.57 -158.871,-298.393l0.103,-0.386c4.656,-47.837 7.056,-100.659 -4.463,-143.048c-17.776,-65.416 -42.012,-108.23 -94.029,-139.58l385.379,103.261l0.36,0.097Z"
@@ -203,14 +203,14 @@
             <div class="row centered text-center mx-auto">
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="http://www.kernel.ua/">
+                        <a class="client-title" href="https://www.kernel.ua/">
                             <img src="img/kernel.gif" class="img-fluid d-block mx-auto" alt="Kernel">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="http://www.tis.ua/">
+                        <a class="client-title" href="https://www.tis.ua/">
                             <img src="img/tis.jpg" class="img-fluid d-block mx-auto" alt="TIS">
                         </a>
                     </div>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="http://www.baplus.com.ua/">
+                        <a class="client-title" href="https://www.baplus.com.ua/">
                             <img src="img/ba.png" class="img-fluid d-block mx-auto" alt="Бершадь Агро Плюс">
                         </a>
                     </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="http://bilozgar.com.ua/">
+                        <a class="client-title" href="https://bilozgar.com.ua/">
                             <img src="img/bilozgar.jpg" class="img-fluid" alt="Білозгар Літинський молокозавод">
                         </a>
                     </div>
