--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="author" content="Yuliia Sh">
     <title>Princip</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
         rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -27,8 +27,8 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <svg id="title-img" width="100%" height="100%" viewBox="0 0 1134 1134" version="1.1" xmlns="https://www.w3.org/2000/svg"
-                    xmlns:xlink="https://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421; will-change: transform;">
+                <svg id="title-img" width="100%" height="100%" viewBox="0 0 1134 1134" version="1.1" xmlns="//www.w3.org/2000/svg" xmlns:xlink="//www.w3.org/1999/xlink"
+                    xml:space="preserve" style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421; will-change: transform;">
                     <path d="M157.607,177.355c33.117,-122.76 166.863,-193.728 298.682,-158.407c131.947,35.355 212.319,163.904 179.366,286.886c-32.921,122.862 -166.57,193.984 -298.393,158.871l-0.386,-0.103c-47.837,-4.656 -100.659,-7.056 -143.048,4.463c-65.416,17.776 -108.229,42.012 -139.58,94.029l103.262,-385.378l0.097,-0.361Z"
                         style="fill:#fff;"></path>
                     <path d="M953.343,152.133c122.76,33.118 193.728,166.863 158.408,298.682c-35.356,131.948 -163.905,212.319 -286.887,179.367c-122.862,-32.921 -193.984,-166.57 -158.871,-298.393l0.103,-0.386c4.656,-47.837 7.056,-100.659 -4.463,-143.048c-17.776,-65.416 -42.012,-108.23 -94.029,-139.58l385.379,103.261l0.36,0.097Z"
@@ -203,14 +203,14 @@
             <div class="row centered text-center mx-auto">
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="https://www.kernel.ua/">
+                        <a class="client-title" href="//www.kernel.ua/">
                             <img src="img/kernel.gif" class="img-fluid d-block mx-auto" alt="Kernel">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="https://www.tis.ua/">
+                        <a class="client-title" href="//www.tis.ua/">
                             <img src="img/tis.jpg" class="img-fluid d-block mx-auto" alt="TIS">
                         </a>
                     </div>
@@ -222,21 +222,21 @@
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="https://www.baplus.com.ua/">
+                        <a class="client-title" href="//www.baplus.com.ua/">
                             <img src="img/ba.png" class="img-fluid d-block mx-auto" alt="Бершадь Агро Плюс">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="https://www.itspec.co.ua/">
+                        <a class="client-title" href="//www.itspec.co.ua/">
                             <img src="img/itspec.gif" class="img-fluid d-block mx-auto" alt="ITSpec">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6">
                     <div class="client-item">
-                        <a class="client-title" href="https://bilozgar.com.ua/">
+                        <a class="client-title" href="//bilozgar.com.ua/">
                             <img src="img/bilozgar.jpg" class="img-fluid" alt="Білозгар Літинський молокозавод">
                         </a>
                     </div>
@@ -398,11 +398,11 @@
 
     <!-- Map -->
     <section class="map">
-        <iframe src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
+        <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
         <small>
-            <a href="https://www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
+            <a href="//www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
         </small>
     </section>
 
@@ -449,13 +449,13 @@
             <i class="fa fa-chevron-up fa-fw fa-1x"></i>
         </a>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
+    <script src="//unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
     <script src="js/self-writing.js"></script>
     <script src="js/common.js"></script>
 </body>
