--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         crossorigin="anonymous">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
         rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="style/style.css">
@@ -30,13 +28,13 @@
                 <svg id="title-img" width="100%" height="100%" viewBox="0 0 1134 1134" version="1.1" xmlns="//www.w3.org/2000/svg" xmlns:xlink="//www.w3.org/1999/xlink"
                     xml:space="preserve" style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421; will-change: transform;">
                     <path d="M157.607,177.355c33.117,-122.76 166.863,-193.728 298.682,-158.407c131.947,35.355 212.319,163.904 179.366,286.886c-32.921,122.862 -166.57,193.984 -298.393,158.871l-0.386,-0.103c-47.837,-4.656 -100.659,-7.056 -143.048,4.463c-65.416,17.776 -108.229,42.012 -139.58,94.029l103.262,-385.378l0.097,-0.361Z"
-                        style="fill:#fff;"></path>
+                        style="fill:#feb41d;"></path>
                     <path d="M953.343,152.133c122.76,33.118 193.728,166.863 158.408,298.682c-35.356,131.948 -163.905,212.319 -286.887,179.367c-122.862,-32.921 -193.984,-166.57 -158.871,-298.393l0.103,-0.386c4.656,-47.837 7.056,-100.659 -4.463,-143.048c-17.776,-65.416 -42.012,-108.23 -94.029,-139.58l385.379,103.261l0.36,0.097Z"
-                        style="fill:#fff;"></path>
+                        style="fill:#feb41d;"></path>
                     <path d="M180.515,981.725c-122.76,-33.117 -193.728,-166.863 -158.407,-298.682c35.355,-131.948 163.904,-212.319 286.886,-179.366c122.862,32.92 193.985,166.57 158.871,298.392l-0.103,0.387c-4.656,47.836 -7.056,100.658 4.463,143.047c17.776,65.416 42.012,108.23 94.029,139.581l-385.378,-103.262l-0.361,-0.097Z"
-                        style="fill:#fff;"></path>
+                        style="fill:#feb41d;"></path>
                     <path d="M976.252,956.503c-33.118,122.76 -166.863,193.728 -298.682,158.408c-131.948,-35.356 -212.32,-163.905 -179.367,-286.887c32.921,-122.862 166.57,-193.984 298.393,-158.871l0.386,0.103c47.837,4.656 100.659,7.056 143.048,-4.462c65.416,-17.777 108.229,-42.013 139.58,-94.029l-103.261,385.378l-0.097,0.36Z"
-                        style="fill:#fff;"></path>
+                        style="fill:#feb41d;"></path>
                 </svg>
                 <span id="navbrand-title">Princip</span>
             </a>
@@ -46,7 +44,7 @@
                     <span></span>
                     <span></span>
                     <span></span>
-                  </div>
+                </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -78,13 +76,13 @@
             <p>Йдемо в ногу з сучасними технологіями</p>
             <br>
             <div class='btn-cont'>
-                <a href="#products" class="btn btn-xl btn-lg js-scroll-trigger hvr-ripple-out">
-                Більше
-                <span class='line-1'></span>
-                <span class='line-2'></span>
-                <span class='line-3'></span>
-                <span class='line-4'></span>
-            </a>
+                <a href="#products" class="btn btn-more btn-lg js-scroll-trigger hvr-ripple-out">
+                    Більше
+                    <span class='line-1'></span>
+                    <!-- <span class='line-2'></span>
+                    <span class='line-3'></span>
+                    <span class='line-4'></span> -->
+                </a>
             </div>
         </div>
     </header>
@@ -95,7 +93,7 @@
             <div class="row text-center">
                 <div class="col-lg-10 mx-auto">
                     <div class="section-heading">
-                        <h2 class="heading-text">Продукти</h2>
+                        <h2 class="heading-text">[ Продукти ]</h2>
                         <div class="row">
                             <div class="col-lg-12">
                                 <img src="img/smartscalesbg.svg" alt="">
@@ -122,7 +120,7 @@
             <div class="row text-center">
                 <div class="col-lg-10 mx-auto">
                     <div class="section-heading">
-                        <h2 class="heading-text">Послуги</h2>
+                        <h2 class="heading-text">[ Послуги ]</h2>
                     </div>
                 </div>
             </div>
@@ -177,7 +175,7 @@
                             <i class="fa fa-thumbs-o-up fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Аудит</h4>
-                        <p class="text-muted">
+                        <p class="text-muted ">
                             Аудит безпечної роботи елеваторів та портових терміналів:
                             <br> Облікова система
                             <br> Система зважування
@@ -280,7 +278,7 @@
                 <div class="row text-center">
                     <div class="col-lg-12 mx-auto">
                         <div class="section-heading">
-                            <h2 class="heading-text">Про нас</h2>
+                            <h2 class="heading-text">[ Про нас ]</h2>
                             <p class="text-muted">
                                 Ми команда професіоналів у розробці та впровадженні складних IT-систем для бізнесу. Нашою спеціалізацією автоматизація та
                                 впровадження сучасних технологій: IoT, web-застосунків, платформа "1С:Підприємство" та інше.
@@ -397,7 +395,7 @@
     </section>
 
     <!-- Map -->
-    <section class="map">
+    <section id="map">
         <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
@@ -406,8 +404,57 @@
         </small>
     </section>
 
+    <!-- Contact -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="heading-text">Залишайтеся на зв'язку!</h2>
+                    <p class="text-muted">Don`t be shy send us a message</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" method="get" action="">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input class="form-control" id="name" name="name" type="text" placeholder="Ім'я" required>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="email" name="email" type="email" placeholder="Електронна пошта" required>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="phone" name="phone" type="tel" placeholder="Телефон" required>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" id="message" name="message" placeholder="Повідомлення" required></textarea>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <div class="btn-cont">
+                                    <button id="sendMessageButton" class="btn btn-more hvr-ripple-out" type="submit">
+                                        Надіслати
+                                        <!-- <span class='line-1'></span>
+                                        <span class='line-2'></span>
+                                        <span class='line-3'></span>
+                                        <span class='line-4'></span> -->
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
-    <footer id="contact">
+    <footer id="contact" class="bg-light py-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center">
@@ -426,18 +473,18 @@
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <a href="#">
-                                    <i class="fa fa-facebook fa-fw fa-2x"></i>
-                                </a>
+                                <i class="fa fa-facebook fa-fw fa-2x"></i>
+                            </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="#">
-                                    <i class="fa fa-twitter fa-fw fa-2x"></i>
-                                </a>
+                                <i class="fa fa-twitter fa-fw fa-2x"></i>
+                            </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="#">
-                                    <i class="fa fa-instagram fa-fw fa-2x"></i>
-                                </a>
+                                <i class="fa fa-instagram fa-fw fa-2x"></i>
+                            </a>
                         </li>
                     </ul>
                     <hr class="small">
@@ -449,6 +496,7 @@
             <i class="fa fa-chevron-up fa-fw fa-1x"></i>
         </a>
     </footer>
+
     <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
