--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
 
     <!-- Map -->
     <section id="map">
-        <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
+        <iframe src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
         <small>
-            <a href="//www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
+            <a href="http://www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
         </small>
     </section>
 
@@ -419,18 +419,18 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input class="form-control" id="name" name="name" type="text" placeholder="Ім'я" required>
+                                    <input class="form-control" id="name" name="name" type="text" placeholder="*Ім'я" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id="email" name="email" type="email" placeholder="Електронна пошта" required>
+                                    <input class="form-control" id="email" name="email" type="email" placeholder="*Електронна пошта" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id="phone" name="phone" type="tel" placeholder="Телефон" required>
+                                    <input class="form-control" id="phone" name="phone" type="tel" placeholder="*Телефон" required>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" id="message" name="message" placeholder="Повідомлення" required></textarea>
+                                    <textarea class="form-control" id="message" name="message" placeholder="*Повідомлення" required></textarea>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
