Some changes css

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="heading-text">Залишайтеся на зв'язку!</h2>
+                    <!-- Just ask us anything. -->
                     <p class="text-muted">Don`t be shy send us a message</p>
                 </div>
             </div>
