--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
 
     <!-- Map -->
     <section id="map">
-        <iframe src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
+        <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
         <small>
-            <a href="http://www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
+            <a href="//www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
         </small>
     </section>
 
@@ -497,6 +497,8 @@
             <i class="fa fa-chevron-up fa-fw fa-1x"></i>
         </a>
     </footer>
+
+    <!-- <button onclick="redirect()" )> newPage</button> -->
 
     <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
