--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+        rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="style/style.css">
@@ -393,11 +396,11 @@
 
     <!-- Map -->
     <section id="map">
-        <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
+        <iframe src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
         <small>
-            <a href="//www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
+            <a href="http://www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
         </small>
     </section>
 
