--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
         crossorigin="anonymous"></script>
     <script src="//unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
-    <script src="js/self-writing.js"></script>
-    <script src="js/common.js"></script>
+    <script src="public/js/self-writing.js"></script>
+    <script src="public/js/common.js"></script>
 </body>
 
 </html>
