--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
 
     <!-- Map -->
     <section id="map">
-        <iframe src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
+        <iframe src="//maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Vinnytsa,+Ukraine&aq=0&oq=twitter&sll=28.659344,-81.187888&sspn=0.128789,0.264187&ie=UTF8&hq=Vinnytsa,+Ukraine&t=m&z=15&iwloc=A&output=embed"
             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br>
         <small>
-            <a href="http://www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
+            <a href="//www.google.pl/maps/place/Winnica,+Obw%C3%B3d+winnicki,+Ukraina,+21000/@49.2347287,28.4346146,13z/data=!3m1!4b1!4m5!3m4!1s0x472d5b65195a6489:0xcbd4e159eedd74fe!8m2!3d49.233083!4d28.4682169?hl=pl"></a>
         </small>
     </section>
 
