--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p>Йдемо в ногу з сучасними технологіями</p>
             <br>
             <div class='btn-cont'>
-                <a href="#products" class="btn btn-more btn-lg js-scroll-trigger hvr-ripple-out">
+                <a href="#products" class="btn btn-more btn-lg js-scroll-trigger">
                     Більше
                     <span class='line-1'></span>
                     <!-- <span class='line-2'></span>
@@ -443,7 +443,7 @@
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <div class="btn-cont">
-                                    <button id="sendMessageButton" class="btn btn-more hvr-ripple-out" type="submit">
+                                    <button id="sendMessageButton" class="btn btn-more" type="submit">
                                         Надіслати
                                         <!-- <span class='line-1'></span>
                                         <span class='line-2'></span>
