--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div id="selfwr-text">
                 <p class="item-1">IoT пристрої (прототипування та впровадження)</p>
                 <p class="item-2">Програмне забезпечення IoT</p>
-                <p class="item-3">Програмне забезпечення WEB</p>
-                <p class="item-4">Програмне забезпечення смартфонів</p>
+                <p class="item-3">Програмне забезпечення смартфонів та WEB</p>
+                <!-- <p class="item-4">Програмне забезпечення смартфонів</p> -->
             </div>
             <h2>для бізнесу</h2>
             <p>Йдемо в ногу з сучасними технологіями</p>
