--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <div class="service-item">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -147,7 +147,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <div class="service-item">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <div class="service-item">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <div class="service-item">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -197,43 +197,43 @@
     <section id="clients" class="bg-light py-4">
         <div class="container">
             <div class="row centered text-center mx-auto">
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto">
                         <a class="client-title" href="//www.kernel.ua/">
-                            <img src="img/kernel.gif" class="img-fluid d-block mx-auto" alt="Kernel">
+                            <img src="img/kernel.gif" class="img-fluid d-block" alt="Kernel">
                         </a>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto">
                         <a class="client-title" href="//www.tis.ua/">
-                            <img src="img/tis.jpg" class="img-fluid d-block mx-auto" alt="TIS">
+                            <img src="img/tis.jpg" class="img-fluid d-block" alt="TIS">
                         </a>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto">
                         <a class="client-title text">TeslaGroup</a>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto last">
                         <a class="client-title" href="//www.baplus.com.ua/">
-                            <img src="img/ba.png" class="img-fluid d-block mx-auto" alt="Бершадь Агро Плюс">
+                            <img src="img/ba.png" class="img-fluid d-block" alt="Бершадь Агро Плюс">
                         </a>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto last last-md">
                         <a class="client-title" href="//www.itspec.co.ua/">
-                            <img src="img/itspec.gif" class="img-fluid d-block mx-auto" alt="ITSpec">
+                            <img src="img/itspec.gif" class="img-fluid d-block" alt="ITSpec">
                         </a>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-6">
-                    <div class="client-item">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="client-item mx-auto last last-md last-sm">
                         <a class="client-title" href="//bilozgar.com.ua/">
-                            <img src="img/bilozgar.jpg" class="img-fluid" alt="Білозгар Літинський молокозавод">
+                            <img src="img/bilozgar.jpg" class="img-fluid d-block" alt="Білозгар Літинський молокозавод">
                         </a>
                     </div>
                 </div>
