Changes of media width

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-6">
-                    <div class="client-item mx-auto last last-md last-sm">
+                    <div class="client-item mx-auto last last-sm last-md">
                         <a class="client-title" href="//bilozgar.com.ua/">
                             <img src="img/bilozgar.jpg" class="img-fluid d-block" alt="Білозгар Літинський молокозавод">
                         </a>
@@ -243,34 +243,6 @@
 
     <!-- About & Technologies -->
     <section id="about">
-        <!-- <div class="img-about">
-                <div class="container">
-                    <div class="row">
-        
-                    </div> 
-                </div>
-            </div> -->
-        <!-- <section class="who-we-are">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="title on-right">
-                                <p>Про</p>
-                                <p><strong>нас</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-7 border-left">
-                            <p>Ми команда професіоналів у розробці та впровадженні складних IT-систем для бізнесу.</p>
-                            <p>Нашою спеціалізацією автоматизація та впровадження сучасних технологій: IoT, web-застосунків, платформа
-                                "1С:Підприємство" та інше. </p>
-                            <p>Вискористовуючи передові та перевірені технології IT-гігантів, ми досягаємо високих результатів,
-                                надаємо якісні послуги та продукти. Зручність, точність та ефективність - це наша основна мета
-                                та ідея.</p>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-
         <div class="who-we-are">
             <div class="container">
                 <div class="row text-center">
